# navibot

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-backend-cloud-run.yml
apps/: __init__.py
apps/backend/: Dockerfile  package.json
apps/backend/drizzle/: 0000_neat_silver_centurion.sql
apps/backend/src/: auth.ts  hub.ts  index.ts  protocol.ts
apps/robot/: __init__.py  __main__.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx  (+1 more)
apps/webserver/: __init__.py  __main__.py
deploy/: cloudbuild-backend-deploy.yaml  cloudbuild-backend.yaml  vercel-web.md
deploy/systemd/: navibot-auto-update.service  navibot-auto-update.timer  navibot-battery-guard.service  navibot-cloud-agent.service
docs/: architecture.md  gpio.md  hardware.md  remote-control.md
scripts/: battery_guard.py  dev.ps1  drive_pid_distance_test.py  encoder_count_watch.py  encoder_motor_accuracy_test.py  fiducial_odometry_calibration.py  home_return_validation.py  ina219_read.py  install_auto_update_service.sh  install_battery_guard_service.sh  install_cloud_agent_service.sh  motor_smoke_test.py  navibot_auto_update.sh  robot_status_loop.py  self_explore_room.py  tof_mapping_drive_test.py  vl53l1x_xshut_read.py  wasd_drive_test.py
src/navibot/: __init__.py  cloud_agent.py  config.py
tests/unit/: test_crypto_session.py  test_navigation_planner.py  test_odometry_calibration.py  test_smart_explorer.py
web/templates/: index.html
(+36 files in other folders)
